# lib-thread-messenger

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/lib-thread-messenger/: Channel.hpp  Logging.hpp  Message.hpp  MessageQ.hpp  Messenger.hpp  ThreadMessenger.hpp  Transport.hpp
src/: Channel.cpp  Messenger.cpp  Transport.cpp
